2015-11-05  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/sample.c: Enhanced to be echo service.

2015-09-15  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 0.10.
	* doc/chopstx.texi (VERSION): 0.10.

	* example-cdc/usb_stm32f103.c: Update from Gnuk.

2015-09-14  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (q_exit): Remove.
	(chx_init, chx_exit): Remove access to Q_EXIT.
	(chx_release_irq_thread): Fix removing form the list.

2015-09-11  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_init, chopstx_create): Fix the initial value
	of flag_cancelable.

2015-09-10  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 0.09.
	* doc/chopstx.texi (VERSION): 0.09.

	* chopstx.c (chx_release_irq_thread): Rename.

2015-09-09  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/usb-cdc.c (usb_cb_ctrl_write_finish): Distinguish
	DTR signal.
	(usb_cb_device_reset): Fix USB reset handling.

	* chopstx.c (chopstx_usec_wait_var, chopstx_cond_wait)
	(chopstx_intr_wait): Call chopstx_testcancel.
	(chopstx_setcancelstate): New.

	* chopstx.c (chx_systick_reset, chx_systick_reload)
	(chx_systick_get): Factor out systick functions.
	(chx_prio_init): Factor out.

2015-09-08  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_request_preemption): Add PRIO argument and check
	the condition inside.
	(chx_timer_expired, chx_handle_intr): Call unconditionally.
	(intr_lock): New variable.
	(chx_handle_intr, chopstx_claim_irq, chopstx_release_irq)
	(chopstx_release_irq_thread): Add spin lock with intr_lock.

	* chopstx.h (chx_intr): Remove member LOCK.

2015-09-07  Niibe Yutaka  <gniibe@fsij.org>

	* example-primer2: New from Kazumoto Kojima.

	* board/board-nitrokey-start.h (VAL_GPIO_USB_ODR)
	(VAL_GPIO_USB_CRL): Fix the values for NeuG settings.

2015-09-04  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/sys.h (BOARD_ID_NITROKEY_START): New.
	* board/board-nitrokey-start.h (BOARD_ID): Fix the value.
	* clk_gpio_init.c (AFIO_MAPR_SWJ_CFG_JTAGDISABLE): New.
